ajustes em Clientes e Insomnia